--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^15.5.0",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.5",
     "redux": "^3.5.2",
     "redux-logger": "^3.0.6",
